--- a/cad_produto/style.css
+++ b/cad_produto/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: rgb(155, 198, 247);
+    background-color:red;
     height: 40px;
     padding: 1em;
     font-size: 30px;
@@ -24,7 +24,7 @@ h5 {
 }
 
 button {
-    background-color: rgb(155, 198, 247);
+    background-color: red;
     color: aliceblue;
     padding: 10px;
     border-radius: 5px;
@@ -36,7 +36,7 @@ button {
 }
 
 button:hover {
-    background-color:  rgb(155, 198, 247);
+    background-color: red;
     
 }
 
